<resources>
    <string name="appName">Meta Quest Discord Rich Presence</string>
    <string name="appShortName">MQRPC</string>
    <string name="notifTitle">MQRPC is running</string>

    <string name="stop">Force stop</string>
    <string name="start">Force start</string>
    <string name="debugLog">Debug/Log</string>
    <string name="permissions">Request permissions</string>
    <string name="enable">Enable module</string>
    <string name="disable">Disable module</string>

    <string name="ipv4Header">Quest IPv4 address:</string>
</resources>
